docs: add comprehensive README with screenshots
- Add README.md with full documentation
- Include screenshots of frontend UI (docs/ folder)
- Document API client usage with code examples
- Add mermaid sequence diagrams for tokenization flow
- Include test card reference table
- Clean up code comments

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <header>
-      <h1>💳 CardPointe Tokenization PoC</h1>
+      <h1>CardPointe Tokenization PoC</h1>
       <p class="subtitle">M1.1: Frontend Card Tokenization Demo</p>
     </header>
 
